package edu.fiuba.algo3.modelo;

public interface IOrdenDeCaptura {
    public IRespuestaDelEvento capturar(Ladron ladron);
}